--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
                 </div>
                
                 <p>
-                  Built a personal website to showcase my skills and projects professionally. Download my resume to explore my qualifications and achievements in greater detail..
+                  Built a personal website to showcase my skills and projects professionally. Download my resume to explore my qualifications and achievements.
                 </p>
                 <br>
                 <p>Html, CSS, JS</p>
               </div>
               <div class="btn-box">
-                <a href="https://github.com/Logasakthi8/travel-diaries-frontend" class="btn" >Source Code</a>
-                <a href="https://travel-diaries-mwty.onrender.com/" class="btn"
+                <a href="https://github.com/Logasakthi8/Portfolio" class="btn" >Source Code</a>
+                <a href="https://loga-sakthi.onrender.com/" class="btn"
                     >Live Preview<i class="bx bx-link-external"></i
                   ></a>
               </div>
