--- a/index.html
+++ b/index.html
@@ -204,24 +204,24 @@
 
             <div class="portfolio-box">
               <div class="img-box">
-                <img src="portfolio3.png" alt="" />
+                <img src="portfolio4.png" alt="" />
               </div>
 
               <div class="info-box">
                 <div class="info-tittle">
-                  <h3>Portfolio</h3>
+                  <h3>Contact Record Storing Website</h3>
                   
                 </div>
                
                 <p>
-                  Built a personal website to showcase my skills and projects professionally. Download my resume to explore my qualifications and achievements.
+                  Developed a responsive dynamic contact list web app using HTML, CSS, and JS, featuring add, delete, and reset functionalities with local storage integration.
                 </p>
                 <br>
                 <p>Html, CSS, JS</p>
               </div>
               <div class="btn-box">
-                <a href="https://github.com/Logasakthi8/Portfolio" class="btn" >Source Code</a>
-                <a href="https://loga-sakthi.onrender.com/" class="btn"
+                <a href="https://github.com/Logasakthi8/contact-record-list-app" class="btn" >Source Code</a>
+                <a href="https://contact-record-list.onrender.com/" class="btn"
                     >Live Preview<i class="bx bx-link-external"></i
                   ></a>
               </div>
