--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </p>
 
             <div class="btn-box">
-              <a href="#" download class="btn">Download CV</a>
+              <a href="Logasakthi_softwareEngineerIntern(9).pdf" download class="btn">Download CV</a>
               <a href="#" class="btn contact-me">Contact Me</a>
             </div>
           </div>
